fixed: GET /organization
