# docs/swagger.json
@@ -190,15 +190,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.organizationBody"
-                        }
-                    },
-                    {
-                        "description": "{",
-                        "name": "organization",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.organizationBody"
+                            "$ref": "#/definitions/controllers.OrganizationBody"
                         }
                     }
                 ],
@@ -419,6 +411,23 @@
                 }
             }
         },
+        "controllers.OrganizationBody": {
+            "type": "object",
+            "properties": {
+                "aliasName": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "establishmentDate": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.Register.registerRequestBody": {
             "type": "object",
             "required": [
@@ -434,23 +443,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.organizationBody": {
-            "type": "object",
-            "properties": {
-                "aliasName": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "establishmentDate": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 }
             }
